--- a/src/components/head.astro
+++ b/src/components/head.astro
@@ -1,7 +1,9 @@
 ---
+import type { Props } from '@astrojs/starlight/props';
+import StarlightHead from '@astrojs/starlight/components/Head.astro';
 import Analytics from '@vercel/analytics/astro';
 import SpeedInsights from "@vercel/speed-insights/astro";
 ---
-
+<StarlightHead {...Astro.props}><slot /></StarlightHead>
 <Analytics />
 <SpeedInsights />
